--- a/categories.html
+++ b/categories.html
@@ -28,6 +28,7 @@
 
 		  <div role="main" class="content">
 <ul>
+    <li><a href="/category/misc.html">misc</a></li>
     <li><a href="/category/review.html">Review</a></li>
 </ul>
 		  </div>	
@@ -45,6 +46,7 @@
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
+	                <li ><a href="/category/misc.html">misc</a></li>
 	                <li ><a href="/category/review.html">Review</a></li>
 	            </ul>
 	          </nav>
