--- a/tags.html
+++ b/tags.html
@@ -48,6 +48,7 @@
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
+	                <li ><a href="/category/misc.html">misc</a></li>
 	                <li ><a href="/category/review.html">Review</a></li>
 	            </ul>
 	          </nav>
