Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -48,8 +48,7 @@
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
-	                <li ><a href="https://jorisvandenbossche.github.io/category/misc.html">misc</a></li>
-	                <li ><a href="https://jorisvandenbossche.github.io/category/review.html">Review</a></li>
+	                <li ><a href="https://jorisvandenbossche.github.io/category/articles.html">articles</a></li>
 	            </ul>
 	          </nav>
 
