--- a/authors.html
+++ b/authors.html
@@ -29,7 +29,7 @@
 		  <div role="main" class="content">
     <h1>Authors on Joris Van den Bossche</h1>
 
-    <ul>        <li><a href="https://jorisvandenbossche.github.io/author/joris-van-den-bossche.html">Joris Van den Bossche</a> (3)</li>
+    <ul>        <li><a href="https://jorisvandenbossche.github.io/author/joris-van-den-bossche.html">Joris Van den Bossche</a> (2)</li>
     </ul>
 		  </div>	
 		  
@@ -46,8 +46,7 @@
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
-	                <li ><a href="https://jorisvandenbossche.github.io/category/misc.html">misc</a></li>
-	                <li ><a href="https://jorisvandenbossche.github.io/category/review.html">Review</a></li>
+	                <li ><a href="https://jorisvandenbossche.github.io/category/articles.html">articles</a></li>
 	            </ul>
 	          </nav>
 
