--- a/categories.html
+++ b/categories.html
@@ -28,8 +28,7 @@
 
 		  <div role="main" class="content">
 <ul>
-    <li><a href="https://jorisvandenbossche.github.io/category/misc.html">misc</a></li>
-    <li><a href="https://jorisvandenbossche.github.io/category/review.html">Review</a></li>
+    <li><a href="https://jorisvandenbossche.github.io/category/articles.html">articles</a></li>
 </ul>
 		  </div>	
 		  
@@ -46,8 +45,7 @@
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
-	                <li ><a href="https://jorisvandenbossche.github.io/category/misc.html">misc</a></li>
-	                <li ><a href="https://jorisvandenbossche.github.io/category/review.html">Review</a></li>
+	                <li ><a href="https://jorisvandenbossche.github.io/category/articles.html">articles</a></li>
 	            </ul>
 	          </nav>
 
