Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -6,11 +6,11 @@
 	<meta name="author" content="Joris Van den Bossche">
 	
 
-	<link rel="stylesheet" href="https://jorisvandenbossche.github.io/theme/css/main.css" type="text/css" />
+	<link rel="stylesheet" href="/theme/css/main.css" type="text/css" />
 		
 
 
-    <link href="https://jorisvandenbossche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Joris Van den Bossche Atom Feed" />
+    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Joris Van den Bossche Atom Feed" />
 </head>
 	
 <body>
@@ -19,9 +19,9 @@
 	  
 	  <header role="banner">
 	    <div class="feeds">
-	      <a href="https://jorisvandenbossche.github.io/feeds/all.atom.xml" rel="alternate"><img src="https://jorisvandenbossche.github.io/theme/images/icons/feed-32px.png" alt="atom feed"/></a>
+	      <a href="/feeds/all.atom.xml" rel="alternate"><img src="/theme/images/icons/feed-32px.png" alt="atom feed"/></a>
 	    </div>
-		<a href="https://jorisvandenbossche.github.io" class="title">Joris Van den Bossche</a>
+		<a href="" class="title">Joris Van den Bossche</a>
       </header>
 	
 	  <div class="wrapper">
@@ -29,7 +29,7 @@
 		  <div role="main" class="content">
     <h1>Authors on Joris Van den Bossche</h1>
 
-    <ul>        <li><a href="https://jorisvandenbossche.github.io/author/joris-van-den-bossche.html">Joris Van den Bossche</a> (2)</li>
+    <ul>        <li><a href="/author/joris-van-den-bossche.html">Joris Van den Bossche</a> (2)</li>
     </ul>
 		  </div>	
 		  
@@ -46,7 +46,7 @@
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
-	                <li ><a href="https://jorisvandenbossche.github.io/category/articles.html">articles</a></li>
+	                <li ><a href="/category/articles.html">articles</a></li>
 	            </ul>
 	          </nav>
 
