Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -46,7 +46,7 @@
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
-	                <li ><a href="https://jorisvandenbossche.github.io/category/articles.html">articles</a></li>
+	                <li ><a href="https://jorisvandenbossche.github.io/category/misc.html">misc</a></li>
 	            </ul>
 	          </nav>
 
