--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ make install
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
-	                <li ><a href="https://jorisvandenbossche.github.io/category/articles.html">articles</a></li>
+	                <li ><a href="https://jorisvandenbossche.github.io/category/misc.html">misc</a></li>
 	            </ul>
 	          </nav>
 
