Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="article__text">
     
 
-<p>In this blogpost I explain the latest developments in the <a href="http://geopandas.readthedocs.io/en/latest/">GeoPandas</a> package. Work is ungoing to vastly improve the performance of the package, by leveraging cython to directly interact with the GEOS library.</p>
+<p>In this blogpost I explain the latest developments in the <a href="http://geopandas.readthedocs.io/en/latest/">GeoPandas</a> package. Work is ongoing to vastly improve the performance of the package, by leveraging cython to directly interact with the GEOS library.</p>
 
   </div>
 </article>
