--- a/archives.html
+++ b/archives.html
@@ -407,8 +407,8 @@ article .meta a.comments_btn:hover {
         <h1 style="margin-bottom: 30px;">Archives and tags</h1>
 
         <div class="meta" style="margin-bottom: 30px;">
-                <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (2)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/shapely.html" class="tag">shapely (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/cython.html" class="tag">cython (1)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (2)</a>
@@ -440,5 +440,23 @@ article .meta a.comments_btn:hover {
       </p>
     </footer>
 -->
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-106868563-1']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-106868563-1');
+    ga('send', 'pageview');
+</script>
     </body>
 </html>
