Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -273,7 +273,7 @@ article .meta a.comments_btn:hover {
   background: #5C881C;
 }
 .post {
-  max-width: 700px;
+  max-width: 800px;
 }
 .post h2:before {
   content: "# ";
@@ -407,14 +407,22 @@ article .meta a.comments_btn:hover {
         <h1 style="margin-bottom: 30px;">Archives and tags</h1>
 
         <div class="meta" style="margin-bottom: 30px;">
-                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (2)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (3)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/cython.html" class="tag">cython (1)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/machine-learning.html" class="tag">machine learning (1)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (1)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/shapely.html" class="tag">shapely (2)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/cython.html" class="tag">cython (1)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (2)</a>
         </div>
 
         <ul class="double-list">
+            <li>
+                <a href='/blog/2017/11/20/categorical-encoder/'>
+                    <h2>A new CategoricalEncoder for handling categorical features in scikit-learn</h2>
+                    <span>20.11.2017</span>
+                </a>
+            </li>
             <li>
                 <a href='/blog/2017/09/19/geopandas-cython/'>
                     <h2>GeoPandas developments: redesign and improved performance using Cython</h2>
