--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Joris Van den Bossche">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <title>Archives | Joris Van den Bossche</title>
+        <title>About | Joris Van den Bossche</title>
 
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -402,24 +402,22 @@ article .meta a.comments_btn:hover {
         </header>
 
         <div id="wrap">
-<div class="container list">
-    <article>
-        <h1 style="margin-bottom: 30px;">Tag: shapely</h1>
 
-        <ul class="double-list">
-            <li>
-                <a href='/blog/2017/09/19/geopandas-cython/'>
-                    <h2>GeoPandas developments: redesign and improved performance using Cython</h2>
-                    <span>19.09.2017</span>
-                </a>
-            </li>
-            <li>
-                <a href='/blog/2017/03/18/vectorized-shapely-cython/'>
-                    <h2>Vectorized shapely operations using Cython</h2>
-                    <span>18.03.2017</span>
-                </a>
-            </li>
-        </ul>
+<div class="container post">
+    <article>
+        <header class="about">
+          <h1>About</h1>
+	  <div class="social-links">
+
+	    <ul>
+	    </ul>
+        </header>
+
+        <div class="article_content">
+            <p>I am Joris Van den Bossche, an open source python enthusiast. I am core contributor to Pandas, and I am currently working at the Paris-Saclay Center for Data Science.</p>
+<p>I did a PhD at Ghent University and VITO in air quality research. In addition, I am also a core developer of Pandas, the main data analysis library in Python and have given several tutorials on this topic at international conferences (PyData Paris and EuroScipy). Currently, I am working at the Paris-Saclay Center or Data Science.</p>
+        </div>
+
     </article>
 </div>
         </div>
