--- a/tags.html
+++ b/tags.html
@@ -273,7 +273,7 @@ article .meta a.comments_btn:hover {
   background: #5C881C;
 }
 .post {
-  max-width: 700px;
+  max-width: 800px;
 }
 .post h2:before {
   content: "# ";
@@ -405,7 +405,9 @@ article .meta a.comments_btn:hover {
     <h1>Tags for Joris Van den Bossche</h1>        <li><a href="https://jorisvandenbossche.github.io/tag/cython.html">cython</a> (1)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/geopandas.html">geopandas</a> (2)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/geospatial.html">geospatial</a> (2)</li>
-        <li><a href="https://jorisvandenbossche.github.io/tag/python.html">python</a> (2)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/machine-learning.html">machine learning</a> (1)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/python.html">python</a> (3)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html">scikit-learn</a> (1)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/shapely.html">shapely</a> (2)</li>
         </div>
 <!--
