Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -402,11 +402,14 @@ article .meta a.comments_btn:hover {
         </header>
 
         <div id="wrap">
-    <h1>Tags for Joris Van den Bossche</h1>        <li><a href="https://jorisvandenbossche.github.io/tag/cython.html">cython</a> (1)</li>
+    <h1>Tags for Joris Van den Bossche</h1>        <li><a href="https://jorisvandenbossche.github.io/tag/contributing.html">contributing</a> (1)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/cython.html">cython</a> (1)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/documentation.html">documentation</a> (1)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/geopandas.html">geopandas</a> (2)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/geospatial.html">geospatial</a> (2)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/machine-learning.html">machine learning</a> (1)</li>
-        <li><a href="https://jorisvandenbossche.github.io/tag/python.html">python</a> (3)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/pandas.html">pandas</a> (1)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/python.html">python</a> (4)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html">scikit-learn</a> (1)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/shapely.html">shapely</a> (2)</li>
         </div>
