--- a/archives.html
+++ b/archives.html
@@ -407,19 +407,25 @@ article .meta a.comments_btn:hover {
         <h1 style="margin-bottom: 30px;">Archives and tags</h1>
 
         <div class="meta" style="margin-bottom: 30px;">
-                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (1)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (1)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/contributing.html" class="tag">contributing (1)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (1)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (2)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/shapely.html" class="tag">shapely (2)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (4)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/cython.html" class="tag">cython (1)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/machine-learning.html" class="tag">machine learning (1)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (2)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/cython.html" class="tag">cython (1)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/shapely.html" class="tag">shapely (2)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (5)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/machine-learning.html" class="tag">machine learning (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/documentation.html" class="tag">documentation (1)</a>
         </div>
 
         <ul class="double-list">
+            <li>
+                <a href='/blog/2018/05/28/scikit-learn-columntransformer/'>
+                    <h2>Introducing the ColumnTransformer: applying different transformations to different features in a scikit-learn pipeline</h2>
+                    <span>28.05.2018</span>
+                </a>
+            </li>
             <li>
                 <a href='/blog/2018/03/13/pandas-sprint-activity/'>
                     <h2>Activity on the pandas github repo during the March 10 documentation sprint</h2>
