Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -409,15 +409,15 @@ article .meta a.comments_btn:hover {
 
         <div class="meta" style="margin-bottom: 30px;">
                 <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (5)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/documentation.html" class="tag">documentation (1)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/machine-learning.html" class="tag">machine learning (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (2)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (2)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (1)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/contributing.html" class="tag">contributing (1)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/cython.html" class="tag">cython (1)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/shapely.html" class="tag">shapely (2)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/cython.html" class="tag">cython (1)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (2)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (1)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (2)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/documentation.html" class="tag">documentation (1)</a>
         </div>
 
         <ul class="double-list">
@@ -435,7 +435,7 @@ article .meta a.comments_btn:hover {
             </li>
             <li>
                 <a href='/blog/2017/11/20/categorical-encoder/'>
-                    <h2>A new CategoricalEncoder for handling categorical features in scikit-learn</h2>
+                    <h2>A new categorical encoder for handling categorical features in scikit-learn</h2>
                     <span>20.11.2017</span>
                 </a>
             </li>
