Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -404,8 +404,8 @@ article .meta a.comments_btn:hover {
 
         <div id="wrap">
     <h1>Authors on Joris Van den Bossche</h1>
-
-    <ul>        <li><a href="https://jorisvandenbossche.github.io/author/joris-van-den-bossche.html">Joris Van den Bossche</a> (5)</li>
+    <ul>
+        <li><a href="https://jorisvandenbossche.github.io/author/joris-van-den-bossche.html">Joris Van den Bossche</a> (6)</li>
     </ul>
         </div>
 <!--
