--- a/categories.html
+++ b/categories.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Joris Van den Bossche">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <title> | Joris Van den Bossche</title>
+        <title>Joris Van den Bossche - Categories | Joris Van den Bossche</title>
 
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -403,9 +403,10 @@ article .meta a.comments_btn:hover {
         </header>
 
         <div id="wrap">
-<ul>
-    <li><a href="https://jorisvandenbossche.github.io/category/misc.html">misc</a></li>
-</ul>
+    <h1>Categories on Joris Van den Bossche</h1>
+    <ul>
+        <li><a href="https://jorisvandenbossche.github.io/category/misc.html">misc</a> (6)</li>
+    </ul>
         </div>
 <!--
     <footer>
