--- a/archives.html
+++ b/archives.html
@@ -408,19 +408,25 @@ article .meta a.comments_btn:hover {
         <h1 style="margin-bottom: 30px;">Archives and tags</h1>
 
         <div class="meta" style="margin-bottom: 30px;">
-                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (5)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (6)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (3)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (3)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (2)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/machine-learning.html" class="tag">machine learning (2)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (2)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/documentation.html" class="tag">documentation (1)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/contributing.html" class="tag">contributing (1)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/shapely.html" class="tag">shapely (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/cython.html" class="tag">cython (1)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (2)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (1)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (2)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/documentation.html" class="tag">documentation (1)</a>
         </div>
 
         <ul class="double-list">
+            <li>
+                <a href='/blog/2019/08/13/geopandas-extension-array-refactor/'>
+                    <h2>GeoPandas now uses the pandas ExtensionArray interface</h2>
+                    <span>13.08.2019</span>
+                </a>
+            </li>
             <li>
                 <a href='/blog/2018/05/28/scikit-learn-columntransformer/'>
                     <h2>Introducing the ColumnTransformer: applying different transformations to different features in a scikit-learn pipeline</h2>
