Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -408,10 +408,10 @@ article .meta a.comments_btn:hover {
         <h1 style="margin-bottom: 30px;">Archives and tags</h1>
 
         <div class="meta" style="margin-bottom: 30px;">
-                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (6)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (7)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (3)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (3)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (3)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/machine-learning.html" class="tag">machine learning (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/documentation.html" class="tag">documentation (1)</a>
@@ -421,6 +421,12 @@ article .meta a.comments_btn:hover {
         </div>
 
         <ul class="double-list">
+            <li>
+                <a href='/blog/2019/11/30/pandas-consistent-missing-values/'>
+                    <h2>Towards consistent missing value handling in Pandas</h2>
+                    <span>30.11.2019</span>
+                </a>
+            </li>
             <li>
                 <a href='/blog/2019/08/13/geopandas-extension-array-refactor/'>
                     <h2>GeoPandas now uses the pandas ExtensionArray interface</h2>
