Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -408,10 +408,11 @@ article .meta a.comments_btn:hover {
         <h1 style="margin-bottom: 30px;">Archives and tags</h1>
 
         <div class="meta" style="margin-bottom: 30px;">
-                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (7)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (8)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (4)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (4)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/pyproj.html" class="tag">pyproj (1)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (3)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (3)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (3)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/machine-learning.html" class="tag">machine learning (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/documentation.html" class="tag">documentation (1)</a>
@@ -421,6 +422,12 @@ article .meta a.comments_btn:hover {
         </div>
 
         <ul class="double-list">
+            <li>
+                <a href='/blog/2020/02/11/geopandas-pyproj-crs/'>
+                    <h2>GeoPandas now uses pyproj.CRS and catches up with PROJ 6</h2>
+                    <span>11.02.2020</span>
+                </a>
+            </li>
             <li>
                 <a href='/blog/2019/11/30/pandas-consistent-missing-values/'>
                     <h2>Towards consistent missing value handling in Pandas</h2>
