--- a/tags.html
+++ b/tags.html
@@ -408,11 +408,12 @@ article .meta a.comments_btn:hover {
         <li><a href="https://jorisvandenbossche.github.io/tag/contributing.html">contributing</a> (1)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/cython.html">cython</a> (1)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/documentation.html">documentation</a> (1)</li>
-        <li><a href="https://jorisvandenbossche.github.io/tag/geopandas.html">geopandas</a> (3)</li>
-        <li><a href="https://jorisvandenbossche.github.io/tag/geospatial.html">geospatial</a> (3)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/geopandas.html">geopandas</a> (4)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/geospatial.html">geospatial</a> (4)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/machine-learning.html">machine learning</a> (2)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/pandas.html">pandas</a> (3)</li>
-        <li><a href="https://jorisvandenbossche.github.io/tag/python.html">python</a> (7)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/pyproj.html">pyproj</a> (1)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/python.html">python</a> (8)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html">scikit-learn</a> (2)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/shapely.html">shapely</a> (2)</li>
     </ul>
