Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -375,6 +375,20 @@ article .meta a.comments_btn:hover {
 .col-lg-12 {
   padding-right: 0px;
   padding-left: 0px;
+}
+
+a.headerlink:link {
+  text-decoration: none;
+  padding: 0px 20px;
+  visibility: hidden;
+}
+h1:hover .headerlink,
+h2:hover .headerlink,
+h3:hover .headerlink,
+h4:hover .headerlink,
+h5:hover .headerlink,
+h6:hover .headerlink {
+  visibility: visible;
 }</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -408,11 +422,11 @@ article .meta a.comments_btn:hover {
         <h1 style="margin-bottom: 30px;">Archives and tags</h1>
 
         <div class="meta" style="margin-bottom: 30px;">
-                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (8)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/python.html" class="tag">python (9)</a>
+                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (4)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/geospatial.html" class="tag">geospatial (4)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/geopandas.html" class="tag">geopandas (4)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/pyproj.html" class="tag">pyproj (1)</a>
-                <a href="https://jorisvandenbossche.github.io/tag/pandas.html" class="tag">pandas (3)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html" class="tag">scikit-learn (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/machine-learning.html" class="tag">machine learning (2)</a>
                 <a href="https://jorisvandenbossche.github.io/tag/documentation.html" class="tag">documentation (1)</a>
@@ -422,6 +436,12 @@ article .meta a.comments_btn:hover {
         </div>
 
         <ul class="double-list">
+            <li>
+                <a href='/blog/2022/04/07/pandas-copy-views/'>
+                    <h2>On copies and views: getting rid of the SettingWithCopyWarning</h2>
+                    <span>07.04.2022</span>
+                </a>
+            </li>
             <li>
                 <a href='/blog/2020/02/11/geopandas-pyproj-crs/'>
                     <h2>GeoPandas now uses pyproj.CRS and catches up with PROJ 6</h2>
