--- a/tags.html
+++ b/tags.html
@@ -375,6 +375,20 @@ article .meta a.comments_btn:hover {
 .col-lg-12 {
   padding-right: 0px;
   padding-left: 0px;
+}
+
+a.headerlink:link {
+  text-decoration: none;
+  padding: 0px 20px;
+  visibility: hidden;
+}
+h1:hover .headerlink,
+h2:hover .headerlink,
+h3:hover .headerlink,
+h4:hover .headerlink,
+h5:hover .headerlink,
+h6:hover .headerlink {
+  visibility: visible;
 }</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -411,9 +425,9 @@ article .meta a.comments_btn:hover {
         <li><a href="https://jorisvandenbossche.github.io/tag/geopandas.html">geopandas</a> (4)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/geospatial.html">geospatial</a> (4)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/machine-learning.html">machine learning</a> (2)</li>
-        <li><a href="https://jorisvandenbossche.github.io/tag/pandas.html">pandas</a> (3)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/pandas.html">pandas</a> (4)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/pyproj.html">pyproj</a> (1)</li>
-        <li><a href="https://jorisvandenbossche.github.io/tag/python.html">python</a> (8)</li>
+        <li><a href="https://jorisvandenbossche.github.io/tag/python.html">python</a> (9)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/scikit-learn.html">scikit-learn</a> (2)</li>
         <li><a href="https://jorisvandenbossche.github.io/tag/shapely.html">shapely</a> (2)</li>
     </ul>
