--- a/authors.html
+++ b/authors.html
@@ -375,6 +375,20 @@ article .meta a.comments_btn:hover {
 .col-lg-12 {
   padding-right: 0px;
   padding-left: 0px;
+}
+
+a.headerlink:link {
+  text-decoration: none;
+  padding: 0px 20px;
+  visibility: hidden;
+}
+h1:hover .headerlink,
+h2:hover .headerlink,
+h3:hover .headerlink,
+h4:hover .headerlink,
+h5:hover .headerlink,
+h6:hover .headerlink {
+  visibility: visible;
 }</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -405,7 +419,7 @@ article .meta a.comments_btn:hover {
         <div id="wrap">
     <h1>Authors on Joris Van den Bossche</h1>
     <ul>
-        <li><a href="https://jorisvandenbossche.github.io/author/joris-van-den-bossche.html">Joris Van den Bossche</a> (8)</li>
+        <li><a href="https://jorisvandenbossche.github.io/author/joris-van-den-bossche.html">Joris Van den Bossche</a> (9)</li>
     </ul>
         </div>
 <!--
